# streamviewer

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: hls-ssl.conf  nginx.conf  streamviewer-ssl.conf  streamviewer.conf  streamviewer.service
scripts/: create_env.sh  update_dependecies.sh
static/: description.md  style.css  sync-stream.js  sync-streamlist.js  sync-streams.js  videojs-http-streaming.min.js
streamviewer/: config.py  server.py  streams.py
templates/: 404.html  default.html  layout.html  stream.html  stream_missing.html  streamlist.html  streams.html
tests/: test_streamviewer.py
