[tool.poetry]
name = "streamviewer"
version = "0.1.0"
description = ""
authors = ["David Huss <dh@atoav.com>"]

[tool.poetry.dependencies]
python = "^3.6"
flask = "^1.1.2"
toml = "^0.10.2"
Flask-Markdown = "^0.3"
gunicorn = "^20.0.4"
humanize = "^3.2.0"
Flask-SocketIO = "4.3.2"
eventlet = "^0.30.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
streamviewer = "streamviewer.server:main"
config = "streamviewer.config:main"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
